src/styles/globals.css
body{
  margin: 0;
}

.editorContainer{
  width: 70%;
  height: 100vh;
}
.editorTopBar{
  height: 5vh;
  display: flex;
  flex-direction: row-reverse;
  width: 100%;
  background-color: #252526;

}

.editorTopBar button{
  background-color: #252526;
  color: white;
  border: 0;
}

.editorTopBar button:hover{
  background-color: #1e1e1e;
  cursor: pointer;
}

.editorConsole{
  background-color: #1e1e1e;
  height: 25%;
  width: 100%;
  border-top: 1px solid white;
  overflow: scroll;
}

.editorConsole p{
  margin: 0;
  color: whitesmoke;
  
}

.questions{
  width:30%;
  height: 100vh;
  background-color: #252526;
  display: flex;
  flex-direction: column;
  color: white;
  border-right: 1px solid white;
}

.questions button{
  background-color: #252526;
  color: white;
  font-size: larger;
  padding: 1vw 0;
  border: 0;
  width: 100%;
}

.questions button:hover{
  background-color: #1e1e1e;

}

.resultTable {
  color: whitesmoke;
  border: 1px solid whitesmoke;
  margin: 5% auto;
  width: 90%;
}

.resultTable th { 
  border: 1px solid whitesmoke;
}

.resultTable td{
  border: 1px solid whitesmoke;
  text-align: center;
}


main{
  width: 99.2vw;
  display: flex;
}

